--- a/MySQL_EasyDump/nbproject/private/private.properties
+++ b/MySQL_EasyDump/nbproject/private/private.properties
@@ -14,4 +14,4 @@ file.reference.xmlrpc-common-3.1.1.jar=D:\\jdk\\xmlrpc\\xmlrpc-common-3.1.1.jar
 file.reference.xmlrpc-server-3.1.1.jar=D:\\jdk\\xmlrpc\\xmlrpc-server-3.1.1.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\sheriff\\AppData\\Roaming\\NetBeans\\dev\\build.properties
+user.properties.file=C:\\Users\\sheriff\\AppData\\Roaming\\NetBeans\\11.0\\build.properties
